@@ -18,6 +18,9 @@ Version 1.0.8.3
      * Modula-3 (Martin Bishop)
      * Rebol (Lecanu Guillaume)
   -  Fixed a problem where HardEscapes weren't working when no escape char was given (BenBE)
+  -  Added a PARSER_CONTROL setting to treat whitespace inside of keywords in
+     the language file as "any whitespace" in the source (i.e. "CREATE TABLE"
+     in SQL will match "CREATE\s+TABLE" instead of literally matching) (BenBE)
   -  Improvements to language files (BenBE)
      * Added some missing Perl keywords and obscure default variables (BenBE)
      * Allow for escaped colons to appear in CSS names (BenBE, simon)
